--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         var level1 = document.getElementById("level1");
 
         // Rendre l'élément et son contenu invisibles
-        level1.style.display = "none";
+        //level1.style.display = "none";
 
         
         var level1 = document.getElementById("level2");
